syntax = "proto3";
option go_package = "github.com/SpeedReach/monify";

import "google/api/annotations.proto";

message FriendEmpty{}

service FriendService{

    rpc DeleteFriend(DeleteFriendRequest) returns (FriendEmpty){
        option (google.api.http) = {
            delete: "/v1/friend/{relation_id}"
        };
    }

    rpc ListFriend(FriendEmpty) returns (ListFriendResponse){
        option (google.api.http) = {
            get: "/v1/friend"
        };
    }

    rpc InviteFriend(InviteFriendRequest) returns (InviteFriendResponse){
        option (google.api.http) = {
            post: "/v1/friend/invite"
            body: "*"
        };
    }

    rpc ListFriendInvitation(FriendEmpty) returns (ListFriendInvitationResponse){
        option (google.api.http) = {
            get: "/v1/friend/invite"
        };
    }
    
    rpc AcceptInvitation(AcceptInvitationRequest) returns (FriendEmpty){
        option (google.api.http) = {
            post: "/v1/friend"
        };
    }

    rpc RejectInvitation(RejectInvitationRequest) returns  (FriendEmpty){
        option (google.api.http) = {
            delete: "/v1/friend/reject_invitation/{invite_id}"
        };
    }
    
}

message DeleteFriendRequest{
    string relation_id = 1;
}

message ListFriendResponse{
    repeated Friend friends = 1;
}

message Friend{
    string friend_id = 1;
    string name = 2;
    string relation_id = 3;
}

message InviteFriendRequest{
    string receiver_nickId = 1;
}

message InviteFriendResponse{
    string invite_id = 1;
}

message ListFriendInvitationResponse{
    repeated Invitation invitation = 1;
}

message Invitation{
    string sender_nickId = 1;
    string sender_name = 2;
    string invite_id = 3;
}

message AcceptInvitationRequest{
    string user1_id = 1;
    string user2_id = 2;
    string invite_id = 3;
}

message RejectInvitationRequest{
    string invite_id = 1;
}
